开放平台/销售管理api/v4/订单/创建订单.md
##创建订单

------------
###说明：
>  根据产品创建保险订单的接口。

###请求方式：
> POST

###请求地址：
> http://platform.360bao.com/api/public/v4/create_order?agent=57305a59061e5f8415455a3c&access_token=khRfDv3sTPOEyEU9NdZgog

###请求参数：
> 
* agent：代理人id，如果需要正确计算佣金，则必需要提供此参数
* access_token：[访问令牌](https://github.com/360bao/Manual/blob/master/%E5%BC%80%E6%94%BE%E5%B9%B3%E5%8F%B0/%E5%AE%A2%E6%88%B7%E7%AB%AF%E8%AE%A4%E8%AF%81%E5%92%8C%E6%8E%88%E6%9D%83/%E8%8E%B7%E5%8F%96access_token.md) (通过 http://platform.360bao.com/auth/token 进行获取)

###授权：
> 需要对调用方进行客户端授权
  
###上行数据：
说明：
* 1.任何一个product/subProducts(子产品)下的applicant, insured, beneficiaries, addressee都可以为空
* 2. product/subProducts结构下可任意添加其他json字段

```
{
    "payment": {
        "method": "bankCard",
        "cardHolder": {
            "fullName": "敬辉",
            "idType": "身份证",
            "idNo": "511028198604304384",
            "phone": "13588888888",
            "bankName": "招商银行",
            "account": "62226287654488"
        },
        "notifyUrl":"http://payment.notify.url"
    },
    "product": {
        "pid": "yabx_family",
        "name": "易安家庭保障计划",
        "其他字段名1": "其他字段值1",
        "其他字段名2": "其他字段值2",
        "applicant": {
            "fullName": "投保人",
            "idType": "身份证",
            "idNo": "37172219841024847X",
            "sex": "男/女",
            "birthdate": "20060102",
            "relationship2Insured": "父母",
            "address": "云南省 大理白族自治州 云龙县",
            "zipCode": "100223",
            "phone": "13588888888",
            "email": "test@360bao.com"
        },
        "insured": {
            "fullName": "被保人",
            "idType": "身份证",
            "idNo": "532929200305074400",
            "sex": "男/女",
            "birthdate": "20060102",
            "relationship2Applicant": "子女",
            "address": "云南省 大理白族自治州 云龙县",
            "zipCode": "100223",
            "phone": "13588888888",
            "email": "test@360bao.com"
        },
        "beneficiaries": [
            {
                "fullName": "受益人1",
                "idType": "身份证",
                "idNo": "37172219841024847X",
                "sex": "男/女",
                "birthdate": "20060102",
                "relationship2Insured": "父母",
                "allocatedShare": 36,
                "phone": "13588888888",
                "email": "test@360bao.com"
            },
            {
                "fullName": "受益人2",
                "idType": "身份证",
                "idNo": "511028198604304384",
                "sex": "男/女",
                "birthdate": "20060102",
                "relationship2Insured": "父母",
                "allocatedShare": 64,
                "phone": "13588888888",
                "email": "test@360bao.com"
            }
        ],
        "addressee": {
            "fullName": "联系人",
            "phone": "13588888888",
            "zipCode": "123456",
            "detail": "四川省 内江市 隆昌县",
            "email": "test@360bao.com"
        },
        "subProducts": [
            {
                "pid": "yabx_nxtdjb",
                "name": "男性特定疾病保险",
                "applicant": {
                    "fullName": "投保人",
                    "idType": "身份证",
                    "idNo": "37172219841024847X",
                    "sex": "男/女",
                    "birthdate": "20060102",
                    "relationship2Insured": "父母",
                    "address": "云南省 大理白族自治州 云龙县",
                    "zipCode": "100223",
                    "phone": "13588888888",
                    "email": "test@360bao.com"
                },
                "insured": {
                    "fullName": "被保人",
                    "idType": "身份证",
                    "idNo": "532929200305074400",
                    "sex": "男/女",
                    "birthdate": "20060102",
                    "address": "云南省 大理白族自治州 云龙县",
                    "zipCode": "100223",
                    "phone": "13588888888",
                    "email": "test@360bao.com"
                },
                "beneficiaries": [
                    {
                        "fullName": "受益人1",
                        "idType": "身份证",
                        "idNo": "37172219841024847X",
                        "sex": "男/女",
                        "birthdate": "20060102",
                        "relationship2Insured": "父母",
                        "allocatedShare": 36,
                        "phone": "13588888888",
                        "email": "test@360bao.com"
                    },
                    {
                        "fullName": "受益人2",
                        "idType": "身份证",
                        "idNo": "511028198604304384",
                        "sex": "男/女",
                        "birthdate": "20060102",
                        "relationship2Insured": "父母",
                        "allocatedShare": 64,
                        "phone": "13588888888",
                        "email": "test@360bao.com"
                    }
                ],
                "addressee": {
                    "fullName": "联系人",
                    "phone": "13588888888",
                    "zipCode": "123456",
                    "detail": "四川省 内江市 隆昌县",
                    "email": "test@360bao.com"
                }
            },
            {
                "pid": "yabx_sezdjb",
                "name": "少儿重大疾病保险",
                "applicant": {
                    "fullName": "投保人",
                    "idType": "身份证",
                    "idNo": "37172219841024847X",
                    "sex": "男/女",
                    "birthdate": "20060102",
                    "relationship2Insured": "父母",
                    "address": "云南省 大理白族自治州 云龙县",
                    "zipCode": "100223",
                    "phone": "13588888888",
                    "email": "test@360bao.com"
                },
                "insured": {
                    "fullName": "被保人",
                    "idType": "身份证",
                    "idNo": "532929200305074400",
                    "sex": "男/女",
                    "birthdate": "20060102",
                    "address": "云南省 大理白族自治州 云龙县",
                    "zipCode": "100223",
                    "phone": "13588888888",
                    "email": "test@360bao.com"
                },
                "beneficiaries": [
                    {
                        "fullName": "受益人1",
                        "idType": "身份证",
                        "idNo": "37172219841024847X",
                        "sex": "男/女",
                        "birthdate": "20060102",
                        "relationship2Insured": "父母",
                        "allocatedShare": 36,
                        "phone": "13588888888",
                        "email": "test@360bao.com"
                    },
                    {
                        "fullName": "受益人2",
                        "idType": "身份证",
                        "idNo": "511028198604304384",
                        "sex": "男/女",
                        "birthdate": "20060102",
                        "relationship2Insured": "父母",
                        "allocatedShare": 64,
                        "phone": "13588888888",
                        "email": "test@360bao.com"
                    }
                ],
                "addressee": {
                    "fullName": "联系人",
                    "phone": "13588888888",
                    "zipCode": "123456",
                    "detail": "四川省 内江市 隆昌县",
                    "email": "test@360bao.com"
                }
            }
        ]
    },
    "statusNotfify": {
        "url":"http://订单状态更新接口",
        "params":{
            "xxxx": "123456789012312345678", //通过Url Query参数原样回传的字段
            "yyyy": "123456789012312345678"  //通过Url Query参数原样回传的字段
        }
    },
    "extraData": {
        "附加信息1": "hahah"
    }
}

```

###下行数据：
```
{
    "data": {
        "orderNo":"xxxxxx",
        "payment":[
            {
                "name": "微信支付",
                "url": "http://wx.360bao.com/pay/request_v3?order_no=10a04671572"
            }
        ]
    },
    "message": "",
    "result": true
}
```
###附：
> 证件类型
* 身份证
* 军官证
* 护照
* 出生证
* 异常身份证
* 港澳通行证
* 回乡证
* 户口簿
* 警官证
* 其他

> 与被保人关系
* 本人         
* 子女         
* 儿子         
* 女儿         
* 夫妻         
* 妻子         
* 丈夫         
* 配偶         
* 父母         
* 祖父母        
* 孙子/孙女/外孙/外孙女




